# Burry

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
scripts/: lookup.py
src/burry/: __init__.py  config.py  graph.py  models.py  state.py
src/burry/nodes/: __init__.py  approval.py  critic.py  crypto_research.py  execution.py  ingestion.py  massive_research.py  research.py
src/burry/prompts/: __init__.py  critic.md  crypto_research.md  macro_research.md  massive_research.md  technical_research.md
src/burry/risk/: __init__.py  limits.py
src/burry/tools/: __init__.py  alpaca.py  binance.py  finnhub.py  massive.py  sentiment.py
tests/: test_binance.py  test_finnhub.py  test_llm.py
